5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1716_2506.log
== TEST (2019-05-14 21:59:15) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:59:54) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:00:12) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
		if(soma < 0):
			print("EXTINCAO")
		else:
			print("LIMITE")
	anos = anos + 1
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:00:31) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
		if(soma < 0):
		print("EXTINCAO")
		else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:00:46) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
		if(soma < 0):
		print("EXTINCAO")
		else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:01:00) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:01:05) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- EXECUTION TIME:
0.129574
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:01:18) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b-c)
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- EXECUTION TIME:
0.200535
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:02:08) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b) - c
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:02:12) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b) - c
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:04:55) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b) - c
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
	print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:05:21) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b) - c
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
	anos = anos + 1
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:24:47) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
soma = a

while(soma > 0  and soma < 1200):
	soma = soma + (a*b) - c
	anos = anos + 1
	if(soma < 0):
		print("EXTINCAO")
	else:
		print("LIMITE")
print(anos)
	

-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:55:51) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos + 1
	if(soma < 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
print(anos)
-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:56:17) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos + 1
	if(soma < 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	print(anos)
-- ERROR:
File "XXXX", line 10
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:56:45) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos + 1
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
print(mensagem)
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:57:09) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos + 1
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:00:38) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos + 1
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
print(anual)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(anual)
NameError: name 'anual' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:01:13) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos + 1
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	print(anual)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(anual)
NameError: name 'anual' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:02:19) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 1


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos + 1
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	print(anual)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(anual)
NameError: name 'anual' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:03:00) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 1


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	anos = anos + 1
print(anos)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:03:35) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 1


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	anos = anos + 1
print(anos)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:03:57) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 1


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	
	if(soma > 0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	anos = anos + 1
print(soma)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:07:17) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 1


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos +1
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:08:00) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b-c
	soma = soma + anual
	anos = anos +1
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:11:09) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b
	soma = soma + anual - c
	anos = anos +1
print(anos)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:11:17) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b
	soma = soma + anual - c
	anos = anos +1
print(soma)
	
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:11:38) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))
soma = a
anos = 0


while(soma > 0  and soma < 1200):
	anual = a*b
	soma = soma + anual - c
	anos = anos +1
	print(soma)
	
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:48:11) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	a = a + (a*b-c)
	anos = anos +1
	if(a<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
print(anos)	
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:49:10) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	a = a + (a*b-c)
	
	if(a<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
	anos = anos + 1
	print(anos)
print(anos)	
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:50:34) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	anual = a + (a*b-c)
	
	if(anual<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
	anos = anos + 1
	print(anos)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:50:43) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	anual = a + (a*b-c)
	
	if(anual<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
	anos = anos + 1
	print(anos)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:51:04) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	anual = a + (a*b-c)
	
	if(anual<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
	anos = anos + 1
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:51:19) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	anual = a + (a*b-c)
	
	if(anual<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
	anos = anos + 1
	print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:51:41) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	anual = a + (a*b-c)
	
	if(anual<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
	anos = anos + 1
	print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:54:42) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	anual = a + (a*b-c)
	
	if(anual>1200):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	anos = anos + 1
	print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:55:47) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 1200):
	anual = a + (a*b-c)
	anos = anos + 1
	
	if(anual>1200):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
	print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:58:35) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual>1200):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
	print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:59:09) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual>1200):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 00:59:32) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual>1200):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- EXECUTION TIME:
0.141501
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
EXTINCAO
EXTINCAO
LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:00:07) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<1200 ):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:00:46) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<1200 and anual>0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:01:07) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<1200 and anual>0):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- EXECUTION TIME:
0.157063
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
EXTINCAO
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:04:11) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<10000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:04:27) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<10000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:04:48) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<10000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- EXECUTION TIME:
0.161914
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:07:35) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:08:11) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 16
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:09:51) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:10:11) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual==12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:11:15) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual>=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:12:49) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual > 0  and anual < 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:13:13) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	anual = anual + (a*b-c)
	anos = anos + 1
	
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:15:18) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	anual = anual + (a*b)
	anos = anos + 1
	
	if():
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:18:22) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	c_anual = a*b-c
	anual = anual + c_anual
	anos = anos + 1
	
	if(anual>=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:18:52) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	c_anual = a*b-c
	anual = anual + c_anual
	anos = anos + 1
	
	if(anual>=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:20:04) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	c_anual = a*b-c
	anual = anual + c_anual
	anos = anos + 1
	
	if(anual>=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- EXECUTION TIME:
0.133503
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:20:49) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	c_anual = a*b-c
	anual = anual + c_anual
	anos = anos + 1
	
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:21:13) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	c_anual = a*b-c
	anual = anual + c_anual
	anos = anos + 1
	
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:21:29) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	c_anual = a*b-c
	anual = anual + c_anual
	anos = anos + 1
	
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- EXECUTION TIME:
0.175563
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
4
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:35:06) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- EXECUTION TIME:
0.146985
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:40:26) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <1200):
	a = a+(a * b)-c
	anos = anos + 1
	if(a<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	print(anos)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:40:53) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <1200):
	a = a+(a * b)-c
	anos = anos + 1
	if(a<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	print(anos)
	
print(anos)
-- ERROR:
File "XXXX", line 12
    if(anual=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:44:05) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0
anual = a

while(anual >= 0  and anual <= 1200):
	if(anual<=12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
	print(mensagem)
	
print(anos)
-- EXECUTION TIME:
0.146253
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
qtde inicial: percentual de crescimento: venda anual: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:08:04) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a<=12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
	print(anos)
	
print(anos)
-- OUTPUT:
EXTINCAO
1
EXTINCAO
2
EXTINCAO
3
EXTINCAO
4
EXTINCAO
5
EXTINCAO
6
EXTINCAO
7
EXTINCAO
8
EXTINCAO
9
EXTINCAO
10
EXTINCAO
11
EXTINCAO
12
EXTINCAO
13
LIMITE
14
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:08:38) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a<=12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
print(anos)
	
print(anos)
-- OUTPUT:
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
LIMITE
14
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:09:06) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a<=12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
print(anos)
-- OUTPUT:
LIMITE
14
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:09:42) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a<=12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
print(anos)
-- EXECUTION TIME:
0.156014
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:09:55) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a<=12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:10:14) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a<=12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.147312
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:10:59) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a > 0 and a<12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:11:22) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a > 0 and a<12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.19546
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:12:05) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a > 0 and a<12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
print(mensagem)
print(anos)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:14:21) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <=12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a > 0 and a <= 12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
print(mensagem)
print(anos)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:15:03) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <=12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a > 0 and a <= 12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:15:22) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <=12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a > 0 and a <= 12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:15:47) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <=12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a > 0 and a <= 12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.151477
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:17:29) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
print(mensagem)
print(anos)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:17:45) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		mensagem = "LIMITE"
	else:
		mensagem = "EXTINCAO"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.12854
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:19:49) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.136986
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:20:26) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
print(anos)

-- OUTPUT:
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:20:50) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
print(anos)

-- EXECUTION TIME:
0.132617
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
EXTINCAO
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
EXTINCAO
EXTINCAO
LIMITE
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:21:00) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a <12000):
	a = a+(a * b -c)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.253312
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:21:48) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 12000):
	a = a+(a * b)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		a = a - c
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:22:05) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 12000):
	a = a+(a * b)
	anos = anos + 1
	if(a >= 0 and a <= 12000):
		a = a - c
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.118308
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:22:25) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 12000):
	a = a+(a * b)
	anos = anos + 1
	if(a >= 0):
		a = a - c
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:22:59) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 12000):
	a = a+(a * b)
	anos = anos + 1
	if(a >= 0):
		a = a - c
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.145668
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:23:35) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 12000):
	a = a+(a * b)-c
	anos = anos + 1
	if(a < 0):
		
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:23:52) 
-- CODE:
a = int(input("qtde inicial: "))
b = int(input("percentual de crescimento: "))/100
c = int(input("venda anual: "))

anos = 0


while(a > 0  and a < 12000):
	a = a+(a * b)-c
	anos = anos + 1
	if(a < 0):
		
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)

-- EXECUTION TIME:
0.194543
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
